--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -42,17 +42,17 @@ jobs:
     - name: Test
       run: dotnet test --no-build --configuration Release --verbosity normal
     - name: Pack
-      if: ("${{ github.ref }}".startsWith("refs/tags/v"))
+      if: startsWith(github.ref, 'refs/tags/v')
       run: dotnet pack -p:PackageVersion=${{ env.nugetVersion }} --configuration Release -o ${{env.DOTNET_ROOT}}/TestTools.ConsolePack --no-build 
     - name: Upload Artifacts
-      if: ("${{ github.ref }}".startsWith("refs/tags/v"))
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-artifact@v2
       with:
         name: NuGet
         path: ${{env.DOTNET_ROOT}}/TestTools.ConsolePack
       
   deploy:
-    if:  ("${{ github.ref }}".startsWith("refs/tags/v"))
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     needs: build-and-test
     environment:
@@ -65,4 +65,4 @@ jobs:
       - name: Push NuGet
         run: |
           $tagVersion = "${{ github.ref }}".substring(11)
-          dotnet nuget push ${{ github.workspace }}/TestTools.ConsolePack/IntelliTect.TestTools.Console.$tagVersion.nupkg --source https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+          dotnet nuget push ${{ github.workspace }}/TestTools.ConsolePack/IntelliTect.TestTools.Console.$tagVersion-ci2.nupkg --source https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
