--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -3,8 +3,8 @@ name: Build, Test, and Deploy
 on:
   push:
     branches: [ main ]
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  release:
+    types: [created]
   pull_request:
     branches: [ main ]
 
@@ -30,6 +30,7 @@ jobs:
       run: dotnet restore
     - name: Set Version
       run: |
+        echo "${{ github.ref }}"
         if ("${{ github.ref }}".startsWith("refs/tags/v")) {
           $tagVersion = "${{ github.ref }}".substring(11)
           echo "buildVersion=$tagVersion.${{ github.run_number }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
