--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -67,5 +67,6 @@ jobs:
           name: NuGet
       - name: Push NuGet
         run: |
+          ls
           $tagVersion = "${{ github.ref }}".substring(11)
-          dotnet nuget push ${{ github.workspace }}/TestTools.ConsolePack/IntelliTect.TestTools.Console.$tagVersion-ci2.nupkg --source https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+          dotnet nuget push /TestTools.ConsolePack/IntelliTect.TestTools.Console.$tagVersion.nupkg --source https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
