--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -75,4 +75,4 @@ jobs:
         with:
           fail_on_unmatched_files: true
           generate_release_notes: true
-          files: IntelliTect.TestTools.Console.$env:buildVersion.nupkg
+          files: IntelliTect.TestTools.Console.${{ env.buildVersion }}.nupkg
