Update and rename build-test-deploy.yml to deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,8 @@
-name: Build, Test, and Deploy
+name: Deploy
 
 on:
-  push:
-    branches: [ main ]
   release:
     types: [created]
-  pull_request:
-    branches: [ main ]
 
 defaults:
   run:
