Chore: Update Deps

--- a/IntelliTect.TestTools.Console/IntelliTect.TestTools.Console.csproj
+++ b/IntelliTect.TestTools.Console/IntelliTect.TestTools.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -26,6 +26,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.CodeDom" Version="8.0.0" />
+    <PackageReference Include="System.CodeDom" Version="9.0.6" />
   </ItemGroup>
 </Project>
