--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -23,9 +23,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: | 
-            3.1.x
-            6.x
+        global-json-file: global.json
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
