Add global JSON file support to setup-dotnet action

--- a/.github/actions/setup-dotnet-build/action.yml
+++ b/.github/actions/setup-dotnet-build/action.yml
@@ -16,6 +16,7 @@ runs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
+        global-json-file: global.json
         
     - name: Restore dependencies
       run: dotnet restore
