--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,17 +19,17 @@
     </PropertyGroup>
 
     <ItemGroup Condition="$(IsPackable) == 'true'">
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
-      <Using Include="System"/>
-      <Using Include="System.Collections.Generic"/>
-      <Using Include="System.Diagnostics"/>
-      <Using Include="System.Globalization"/>
-      <Using Include="System.IO"/>
-      <Using Include="System.Linq"/>
-      <Using Include="System.Text"/>
-      <Using Include="System.Text.RegularExpressions"/>
+      <Using Include="System" />
+      <Using Include="System.Collections.Generic" />
+      <Using Include="System.Diagnostics" />
+      <Using Include="System.Globalization" />
+      <Using Include="System.IO" />
+      <Using Include="System.Linq" />
+      <Using Include="System.Text" />
+      <Using Include="System.Text.RegularExpressions" />
     </ItemGroup>
 </Project>
