--- a/IntelliTect.TestTools.Console.Tests/IntelliTect.TestTools.Console.Tests.csproj
+++ b/IntelliTect.TestTools.Console.Tests/IntelliTect.TestTools.Console.Tests.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.10.4" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.10.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="MSTest.TestAdapter" />
+    <PackageReference Include="MSTest.TestFramework" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IntelliTect.TestTools.Console\IntelliTect.TestTools.Console.csproj" />
