--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,9 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly" 
+
+  - package-ecosystem: "dotnet-sdk"
+    directory: "/"
+    # Check for updates once a week
+    schedule:
+      interval: "weekly"
