feat: Use nuget trusted publishing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,16 +54,23 @@ jobs:
     needs: build-and-test
     environment:
       name: 'Production'
+    permissions:
+      id-token: write  # Required for OIDC trusted publishing to nuget.org
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v7
         with:
           name: NuGet
+      - name: NuGet login (OIDC → temp API key)
+        uses: NuGet/login@v1
+        id: nuget-login
+        with:
+          user: ${{ secrets.NUGET_USER }}
       - name: Push NuGet
         run: |
           $tagVersion = "${{ github.ref }}".substring(11)
           echo "tagVersion=$tagVersion" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          dotnet nuget push IntelliTect.TestTools.Console.$tagVersion.nupkg --source https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+          dotnet nuget push IntelliTect.TestTools.Console.$tagVersion.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ steps.nuget-login.outputs.NUGET_API_KEY }} --skip-duplicate
       - name: Upload nupkg to Releases
         uses: softprops/action-gh-release@v2
         with:
